--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-cookie": "^2.2.1",
     "next": "^10.1.3",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "redux-devtools-extension": "^2.13.9",
