--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.21.1",
+    "google-maps-react": "^2.0.6",
     "js-cookie": "^2.2.1",
     "next": "^10.1.3",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
+    "react-google-maps-loader": "^4.3.0",
     "react-redux": "^7.2.3",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0"
